--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
 
 <body>
 
+<nav class="navbar">
+  <div class="container">
+    <a class="navbar-brand" href="#">
+      <img src="imgs/bg.png" alt="Bootstrap" width="55" height="45">
+    </a>
+  </div>
+</nav>
+
     <section class="hero">
         <div class="overlay">
             <div class="row">
