fixed overflow on smaller screen

--- a/index.html
+++ b/index.html
@@ -22,11 +22,14 @@
 
     <section class="hero">
         <div class="overlay">
+          <div class="container">
             <div class="row">
                 <div class="col">
                      <h1>Drake Album Library</h1>
             <p>Discover the evolution of Drake’s music through his iconic albums.</p>
                 </div>
+          </div>
+            
             </div>
         </div>
     </section>
@@ -113,7 +116,6 @@
           <h5>If You're Reading This It's Too Late (2015)</h5>
         </div>
       </div>
-
     </div>
 
     <button class="carousel-control-prev" type="button" data-bs-target="#tracklistCarousel" data-bs-slide="prev">
